--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -3,7 +3,7 @@
 - var minDuration = pricing.min_duration
 title ST-#{formatName(user.first_name, user.last_name, user.title)}
 include ../header
-.modal.fade#scheduler
+div.modal.fade#scheduler
     .modal-dialog
         .modal-content
             .modal-header
