--- a/views/memberRegistration/login.jade
+++ b/views/memberRegistration/login.jade
@@ -23,6 +23,7 @@ include ../header
                                     dd We connect the calls without disclosing your number
                     .col-md-6
                         .call-card
+                            include ../errorMessage
                             form#login-form(role='form', method='POST')
                                 .form-group
                                     label(for='username') Email
