Fixed header on error pages

--- a/views/404.jade
+++ b/views/404.jade
@@ -1,5 +1,22 @@
 !!! 5
-include header
+!!! 5
+head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=false')
+    link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
+    link(href='/bower_dependencies/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
+    link(href='/bower_dependencies/bootstrapValidator/dist/css/bootstrapValidator.css', rel='stylesheet')
+    link(href='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css', rel='stylesheet')
+    link(href='/css/main.css', rel='stylesheet')
+    link(rel="stylesheet" href="/bower_dependencies/76d-social-icons/assets/css/social-icons.css")
+    link(rel="stylesheet" href="/bower_dependencies/76d-social-icons/assets/css/main.css")
+.masthead(role='banner')
+    .container
+        .masthead-brand
+            a.logo.hidden-xs(href='/')
+            a.icon.visible-xs(href='/')
+        .masthead-controls
 .matter
     .container
         .row
