--- a/views/header.jade
+++ b/views/header.jade
@@ -31,6 +31,7 @@ head
     script.
         $(document).ready(function() {
             $(".user-control").hover(function() { $(".user-control .user-modal").show(); } , function() { $(".user-control .user-modal").hide(); });
+            $('.datepicker').datetimepicker();
         });
 
 .masthead(role='banner')
